# PSyclone

./: .coverage.mardinateur.164056.XuuHVCFx.wgw5  .coveragerc  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README  README.gource  README.md  README.uml  ____init_____8py_source.html  algGen_8py_source.html  annotated.html  annotated_dup.js  apt.txt  changelog  classes.html  classpsyclone_1_1algGen_1_1Alg-members.html  classpsyclone_1_1algGen_1_1Alg.html  classpsyclone_1_1algGen_1_1Alg.js  classpsyclone_1_1algGen_1_1Alg__coll__graph.map  classpsyclone_1_1algGen_1_1Alg__inherit__graph.md5  classpsyclone_1_1algGen_1_1NoInvokesError-members.html  classpsyclone_1_1algGen_1_1NoInvokesError.html  classpsyclone_1_1algGen_1_1NoInvokesError.js  classpsyclone_1_1algGen_1_1NoInvokesError__inherit__graph.map  classpsyclone_1_1algGen_1_1NoInvokesError__inherit__graph.md5  classpsyclone_1_1configuration_1_1Config-members.html  classpsyclone_1_1configuration_1_1Config.html  classpsyclone_1_1configuration_1_1Config.js  classpsyclone_1_1configuration_1_1Config__coll__graph.md5  classpsyclone_1_1configuration_1_1Config__inherit__graph.map  classpsyclone_1_1configuration_1_1Config_a5b3dd9f47532fba16d90ebc46ff00d4e_cgraph.map  classpsyclone_1_1configuration_1_1Config_a5b3dd9f47532fba16d90ebc46ff00d4e_cgraph.md5  classpsyclone_1_1configuration_1_1Config_a654f0ff21c8bdc427c46b846d578e9e1_cgraph.map  classpsyclone_1_1configuration_1_1Config_a654f0ff21c8bdc427c46b846d578e9e1_cgraph.md5  classpsyclone_1_1configuration_1_1Config_aafeffd3d7eb996db722f39ea643191dc_cgraph.map  (+1823 more)
.github/: linkspector.yml
.github/workflows/: closed_issue_check.yml  compilation.yml  extraction_test.yml  lfric_test.yml  linkcheck.yml  linkspector.yml  mlc_config.json  nemo_tests.yml  nemo_v5_tests.yml  python-package.yml  python_publish.yml  repo-sync.yml
bin_dev/: run_flake8.sh
bin_git/: .run_flake8.sh.swp  run_flake8.sh
config/: psyclone.cfg
contrib/dl_timer/: README  dl_timer.f90
contrib/simple_timing/: README  simple_timing.f90
contrib/template/: dummy_lib.f90
contributions/: install
doc/: .readthedocs.yaml  Makefile  README  README.md  algorithm_layer.rst  api.rst  built_ins.rst  claw.rst  code_extraction.rst  conf.py  configuration.rst  developers.rst  developers_gocean1p0_stencils.rst  distributed_memory.rst  dofs_cont_global.dia  doxgen.config  dynamo0p1.rst  dynamo0p3.rst  dynamo0p3_topclasses.dot  examples.rst  f2py_install.rst  generator_script.rst  getting_going.rst  gocean1p0.rst  index.rst  introduction.rst  kernel_layer.rst  line_length.rst  multigrid.xcf  nemo.rst  nemo0p1.rst  output.txt  pip_requirements.txt  profiling.rst  psy_layer.rst  psyclone.doxy  psyclone_script.rst  psyke.rst  ref_guide.rst  refs.bib  (+6 more)
doc/_ext/: apilinks.py
doc/bibliography/: references.bib  zz_bibliography.rst
doc/developer_guide/: .readthedocs.yaml  APIs.rst  Makefile  cells_distributed.dia  cells_global.dia  coding-style.rst  conf.py  dependency.rst  developers.rst  dofs_cont_annexed.dia  dofs_cont_halos.dia  dofs_disc_distributed.dia  dofs_disc_global.dia  index.rst  integration-test.rst  interface_example.py  module_manager.rst  modules.rst  new_api.rst  parsing.rst  pip_requirements.txt  profiling.rst  psy_data.rst  psyir.rst  psyir_backends.rst  psyir_frontends_backends.rst  psyir_symbols.rst  psykal.rst  references.bib  sympy.rst  system_specific_setup.rst  transformations.rst  working_practises.rst
doc/logo/: psyclone_v1.0.xcf  psyclone_v1.0_inverted.xcf  psyclone_v1.0_small.xcf
doc/psyad/: implementation.rst  index.rst  (+3 more)
example/: Makefile  integrate_one.F90
examples/: .gitignore  Makefile  README.md  check_dyneg11  check_dyneg12  check_dyneg3  check_examples  check_examples.orig  common.mk  top_level.mk
examples/nemo/eg4/: CMakeLists.txt  Makefile  README  README.md  config.py  config.py.in  copy_stencil.f90  copy_stencil.ipynb  dawn.cu  dawn.py  dawn_script.py  driver.f90  hori_diff.f90  if_example.f90  intrinsic_example.f90  nemo_kernel_print.py  sign.f90  sir_trans.py  sir_trans_all.py  sir_trans_intrinsics.py  sir_trans_loop.py  tra_adv_compute.F90  tra_adv_compute_auto_arrays.F90  tridiagonal_solve.f90  wrapper.c++
examples/nemo/eg4/dawn_cpp/: driver.f90  res_cpp.f90  runme.sh  tra_adv  tra_adv_compute.cpp  wrapper_cpp.cpp
examples/nemo/eg4/matthias_code/: CMakeLists.txt  driver.f90  driver_cpp.cpp  res.cpp  res.cu  res_cpp.f90  res_cuda.f90  runme.sh  wrapper_cpp.cpp  wrapper_cpp.h  wrapper_cuda.cu  wrapper_cuda.h
examples/nemo/eg4/minimal_test/: driver.f90  res.out  res_cpp.f90  tra_adv_compute.cpp  wrapper_cpp.cpp  wrapper_cpp.h
f2py_88/: MANIFEST.in
f2py_93/: setup.py
generator/: README  algGen.py  parse.py
ghcodegen/: f2pygen.py  f2pyutils.py  ghclasses.py  ghtools.py  unused.py
lib/: .gitignore  Makefile  README  README.md  get_python.sh  process.py  psy_data_base.f90  psy_data_base.jinja
nemo_env/: pyvenv.cfg
psygentest/: Makefile  alg.f90  kern.f90  top.f90  types.f90
search/: all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  (+25 more)
src/: __init__.py  algGen.py  config.py  dynamo0p1.py  dynamo0p3.py  dynamo0p3_builtins.py  dynamo0p3_builtins_mod.f90  expression.py  f2pygen.py  generator.py  genkernelstub.py  ghproto.py  gocean0p1.py  gocean1p0.py  gui.py  line_length.py  nemo0p1.py  optimise.py  parse.py  parse2003.py  psyGen.py  transformations.py  undoredo.py
tests/: runtests.py
tutorial/: README.md  common.mk  introduction.ipynb  nemo.ipynb  nemo_eg2.ipynb  parsing_code.ipynb
utils/: run_flake8.sh  run_gen_docs.sh  run_pytest.sh  run_pytest_cov.sh  update_copyright.sh
(+5206 files in other folders)
